--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
     src: url(../fonts/valorant.ttf);
 }
 
-* {
+.header-1, .header-2, .header-3 {
     font-family: 'valorant';
 }
 
@@ -45,15 +45,18 @@
 #days-num, #hours-num, #mins-num, #secs-num {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin-top: 60px;
+    font-size: 80px;
+    color: white;
+    margin-top: 40px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .countdown-timer {
     display: flex;
     flex-direction: row;
+    margin-top: 40px;
     justify-content: space-around;
-    margin-top: 60px;
 }
 
 .countdown-text {
@@ -62,8 +65,21 @@
     justify-content: space-around;
 }
 
-.days, .hours, .mins, .secs, #days-num, #hours-num, #mins-num, #secs-num {
-    font-size: 70px;
+.days, .hours, .mins, .secs {
+    font-size: 80px;
     color: white;
     font-family:'VALORANT', Times, serif;
+    margin-bottom: 20px;
+}
+
+.countdown {
+    background-color: rgba(0, 0, 0, 0.500);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+#hours-num {
+    padding-left: 55px;
+}
+#mins-num {
+    padding-left: 55px;
 }
