--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@
     color: white;
     text-align: center;
     margin-top: 100px;
+    zoom: 300%;
 }
 
 .header-2 {
@@ -33,6 +34,7 @@
     color: white;
     text-align: center;
     margin-top: 180px;
+    zoom: 300%;
 }
 
 .header-3 {
@@ -40,6 +42,7 @@
     color: white;
     text-align: center;
     margin-top: 100px;
+    zoom: 300%;
 }
 
 #days-num, #hours-num, #mins-num, #secs-num {
@@ -79,6 +82,7 @@
 .countdown {
     background-color: rgba(0, 0, 0, 0.500);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    zoom: 300%;
 }
 
 #hours-num {
